--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"symfony/twig-bridge": "2.4.*",
 		"doctrine/dbal": "2.2.*",
 		"symfony/translation": "2.4.*",
-		"symfony/config": "2.4.*"
+		"symfony/config": "2.4.*",
+		"symfony/form": "2.4.*"
     },
 	"autoload": {
 		"psr-0": {
