--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "silex/silex": "~1.2",
+        "silex/silex": "1.2.0",
 		"symfony/security": "2.4.*",
 		"symfony/routing": "2.4.*",
 		"symfony/yaml": "2.4.*",
